--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^3.0.3",
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "@vicons/ionicons4": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "naive-ui": "^2.42.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
+    "vfonts": "^0.0.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
   }
