--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "pinia": "^3.0.3",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-material-design-icons": "^5.3.1",
+    "vuejs-smart-table": "^0.0.8"
   },
   "devDependencies": {
+    "@iconify/vue": "^5.0.0",
     "@tailwindcss/vite": "^4.1.13",
     "@vicons/ionicons4": "^0.13.0",
     "@vitejs/plugin-vue": "^6.0.1",
