--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^13.9.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-material-design-icons": "^5.3.1",
