--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-material-design-icons": "^5.3.1",
+    "vue-router": "^4.5.1",
     "vuejs-smart-table": "^0.0.8"
   },
   "devDependencies": {
