--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,6 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
-  },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  }//,
+  //"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
